<resources>
    <string name="app_name">TabqyPOS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="txtPos">POS</string>
    <string name="txtLogin">Login</string>
    <string name="txtOk">Ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">TABQY</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ali</string>
    <string name="nav_header_subtitle">POS1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main_dash_board">MainDashBoardActivity</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="save">Save</string>
    <string name="charge_btn">charge \n 8.00</string>

    <!--OnlineFragment-->
    <string name="information">Information</string>
    <string name="order_number">Order Number</string>
    <string name="order_taken_at">Order Taken At</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="driver">Driver</string>
    <string name="amount">Amount</string>
    <string name="deliver_to">Deliver to</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_in_progress">Deliver - InProgress</string>
    <string name="waiting_for_pick">Waiting for Pick</string>
    <string name="new_orders">New Orders</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>


    <!--fragment charge -->
    <string name="fragment_charge_txtsubtotal">Sub Total : </string>
    <string name="fragment_charge_txttax">Tax : </string>
    <string name="fragment_charge_txttotal">Total : </string>
    <string name="fragment_charge_txtOrderNo">Order No </string>
    <string name="fragment_charge_txtApplyCoupon">Apply coupon</string>
    <string name="fragment_charge_txtApplypoint">Apply point</string>
    <string name="fragment_charge_txtApply">Apply</string>
    <string name="fragment_charge_txtTotalAmt">Total Amount</string>
    <string name="fragment_charge_RadioCAsh">Pay by Cash</string>
    <string name="fragment_charge_RadioCard">Pay by Card</string>
    <string name="fragment_charge_RadioCardBoth">Pay by Both</string>
    <string name="fragment_charge_btnCancel">Cancel </string>
    <string name="fragment_charge_txt_take_way">Take way </string>

    <!--activity search-->
    <string name="activity_search_edt_search">Enter Customer Mobile or Telephone Number </string>
    <string name="activity_search_txt_search">Search!</string>


    <!--fragment save-->
    <string name="fragment_save_txt_delivery">Delivery Address</string>
    <string name="fragment_save_txt_delete">Delete</string>
    <string name="fragment_save_txt_add_address">Add Address</string>
    <string name="fragment_save_txt_place_order">Place New Order</string>

    <!--dialog delete item -->
    <string name="dialog_del_clear_title">Clear Items </string>
    <string name="dialog_del_clear_content">Are you sure you want to clear the items? </string>
    <string name="dialog_del_cancel">Cancel </string>
    <string name="dialog_del_clear">Clear </string>

    <!--dialog add note item -->
    <string name="dialog_add_note_title">Add Note </string>
    <string name="dialog_add_note_add">Add </string>

    <!--dialog add note item -->
    <string name="dialog_add_dis_title">Add Discount </string>

    <!--dialog delete address-->
    <string name="dialog_add_address_content">Are you sure you want to delete the address? </string>
    <string name="dialog_add_address_delete">Delete Address</string>

    <!--fragment pin -->
    <string name="fragment_pin_1">1</string>
    <string name="fragment_pin_clear">Clear</string>
    <string name="fragment_pin_0">0</string>
    <string name="fragment_pin_9">9</string>
    <string name="fragment_pin_8">8</string>
    <string name="fragment_pin_7">7</string>
    <string name="fragment_pin_6">6</string>
    <string name="fragment_pin_5">5</string>
    <string name="fragment_pin_4">4</string>
    <string name="fragment_pin_3">3</string>
    <string name="fragment_pin_2">2</string>
    <string name="fragment_pin_enter_the_pin_of_manager_or_administrator">Enter the PIN of manager or administrator</string>

    <!-- status bar -->
    <string name="status_bar_customer">Customer</string>
    <string name="status_bar_online_order">Online Order</string>
    <string name="status_bar_scan">Scan</string>
    <string name="status_bar_search">Search</string>
    <string name="status_bar_add">Add</string>
    <string name="status_bar_add_discount">Add Discount</string>
    <string name="status_bar_add_note">Add Note</string>

    <!--fragment crm -->
    <string name="fragment_crm_items_name">Items name</string>
    <string name="fragment_crm_qty">Qty</string>
    <string name="fragment_crm_price">Price</string>
    <string name="fragment_crm_subtotal">SubTotal</string>
    <string name="fragment_table_table_order">Table Order</string>
    <string name="dialog_pay_by_cash">Pay By Cash</string>

    <!--fragment receipt-->
    <string name="fragment_receipts_txt_receipt">Receipts</string>

    <!--fragment single receipt-->
    <string name="fragment_single_receipts_txt_receipt">Refund</string>
    <string name="fragment_single_receipts_txt_total">Total</string>

    <!--fragment refund -->
    <string name="fragment_refund_select_the_items_for_refund">Select the items for refund</string>
    <string name="fragment_refund_total">Total</string>
    <string name="fragment_refund_receipt">Refund receipt</string>

    <!--activity transaction-->
    <string name="activity_trans_enter_email">Enter email</string>
    <string name="actvity_trans_send_receipt">Send Receipt</string>
    <string name="actvity_trans_new_sale">New Sale</string>
    <string name="activity_trans_transaction_successful">Transaction Successful</string>

    <!--activity main -->
    <string name="activity_main_walkin">WalkIn</string>
    <string name="activity_main_crm">CRM</string>
    <string name="activity_main_table">Table</string>
    <string name="activity_main_online">Online</string>
    <string name="activity_main_charity">Charity</string>
    <string name="activity_main_order_nstatus">Order Status</string>

    <!--dialog online details -->
    <string name="dialog_online_details_customer_name">Customer Name</string>
    <string name="dialog_online_details_customer_phone">Phone Number:</string>
    <string name="dialog_online_details_customer_area">Delivery Area:</string>
    <string name="dialog_online_details_customer_loc">Location/Branch</string>
    <string name="dialog_online_details_customer_del_add">Delivery Address:</string>
    <string name="dialog_online_details_close">Close</string>
    <string name="dialog_online_details_re_print">Re-print</string>
    <string name="dialog_online_details_status_history">Status History</string>

    <!--activity  feedback-->
    <string name="activity_feedback_title">Feedbacks</string>

    <!--item feedback-->
    <string name="item_feedback_view_comment">View Comment</string>

    <!--activity feedback response-->
    <string name="activity_feedback_res_title">Response to feedback </string>
    <string name="activity_feedback_res_rating">Rating </string>
    <string name="activity_response_feed_send">Send</string>
    <string name="activity_response_feed_type_a_message">Type a message</string>

    <!--fragment charity-->
    <string name="fragment_charity_heading">Extra Feature for those Restaurant who \ndon\'t want to waste their Foods </string>
    <string name="fragment_charity_watse">Don\'t \nWaste Food  </string>
    <string name="fragment_charity_give">Give to \nCharity People </string>
    <string name="fragment_charity_skip">Skip </string>

    <!--fragment charity2-->
    <string name="fragment_charity2_heading">If the Button is \"ON\" Charity people will able to find the Restaurant </string>
    <string name="fragment_charity2_heading_2">Charity food available.....!</string>
    <string name="fragment_charity2_time_set">Please set time</string>
    <string name="fragment_charity2_close_time">Closing time</string>
    <string name="fragment_charity2_open_time">Opening time</string>
    <string name="fragment_charity2_alert">Send Alert to Charity Person </string>
    <string name="fragment_charity2_apply">Apply </string>
    <string name="item_charity_person_invite">Invite</string>

    <!--dialog crm home-->
    <string name="dialog_crm_home_search_customer">Search Customer</string>
    
    <!--Walkin Fragment-->
    <string name="are_you_sure_you_want_to_add_this_item">Are you sure you want to add this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--dialog walkin pay by cash-->
    <string name="dialog_cash_tender_return">Tender Return</string>
    <string name="dialog_cash_cash_received">Cash Received</string>
    <string name="dialog_cash_total_amount">Total Amount</string>

    <!--dialog pay by card-->
    <string name="dialog_walkin_pay_card_type">Card Type</string>
    <string name="dialog_walkin_pay_transaction_no">Transaction No.</string>
    <string name="fragment_walkin_done">Done</string>

    <!--TableFragment-->
    <string name="code">Code</string>
    <string name="reservation">Reservation</string>
    <string name="done">Done</string>
    <!--<string name="date">Date</string>-->
    <string name="date_forrmat">yyyy/mm/dd</string>
    <string name="time">Time</string>
    <string name="time_format">HH : MM</string>
    <string name="no_of_guest">No of Guest</string>
    <string name="with_food">With food</string>
    <string name="without_food">Without food</string>
    <string name="approved">Approved</string>
    <string name="decline">Decline</string>

</resources>
