<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_border">

    <com.tabyq.pos.tabqypos.customtext.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/dialog_del_txt_title"
        android:textColor="@color/colorBlack"
        android:text="@string/dialog_del_clear_title"/>
    <com.tabyq.pos.tabqypos.customtext.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/dialog_del_txt_content"
        android:textColor="@color/colorlightBlack"
        android:text="@string/dialog_del_clear_content"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp">
        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textAllCaps="true"
            android:textSize="@dimen/extra_small_size"
            android:id="@+id/dialog_del_cancel"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_backgroundpink"
            android:text="@string/dialog_del_cancel"/>
        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textAllCaps="true"
            android:textSize="@dimen/extra_small_size"
            android:id="@+id/dialog_del_clear"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorlightBlack"
            android:text="@string/dialog_del_clear"/>

    </LinearLayout>

</LinearLayout>