<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_pop_up_white"
    android:padding="@dimen/size_20">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_alignParentLeft="true"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">

            <com.tabyq.pos.tabqypos.customtext.CustomTextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:id="@+id/dialog_table_reservation_date"
                android:text=""
                android:hint="@string/date_forrmat"
                android:textColorHint="#ECF0F1"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:background="@drawable/shape_border_grey"/>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:id="@+id/foodie_request_a_dish_date_icon"
                android:gravity="center"
                android:background="@drawable/shape_background_theme" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_table_reservation_calender_image"
                    android:src="@drawable/ic_calender"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp">

        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_alignParentLeft="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">

            <com.tabyq.pos.tabqypos.customtext.CustomTextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:id="@+id/dialog_table_reservation_time"
                android:text=""
                android:textSize="12sp"
                android:hint="@string/time_format"
                android:textColorHint="#ECF0F1"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:background="@drawable/shape_border_grey"/>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/shape_background_theme" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_table_reservation_clock_image"
                    android:src="@drawable/ic_clock"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp">

        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_of_guest"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_20">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/with_food"
            android:buttonTint="@color/colorappPink"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/without_food"
            android:buttonTint="@color/colorappPink"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_20">

        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/dialog_table_reservation_approved"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#BB0162"
            android:gravity="center"
            android:text="@string/approved"
            android:textSize="@dimen/small_size"
            android:textColor="#fff" />

        <com.tabyq.pos.tabqypos.customtext.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/dialog_table_reservation_decline"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#A60054"
            android:gravity="center"
            android:textSize="@dimen/small_size"
            android:text="@string/decline"
            android:textColor="#fff"
            android:layout_marginLeft="@dimen/size_20"/>

    </LinearLayout>

</LinearLayout>